force-app/main/default/objects/InquiryLine__c/InquiryLine__c.object-meta.xml
<CustomObject>
    <label>Inquiry Line</label>
    <nameField>
        <displayFormat>IQL-{0000}</displayFormat>
        <label>Inquiry Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>