force-app/main/default/objects/InquiryLine__c/fields/Combo_Product_fomula__c.field-meta.xml
<CustomField>
    <fullName>Combo_Product_fomula__c</fullName>
    <formula>ComboProduct__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combo Product</label>
    <type>Text</type>
</CustomField>