force-app/main/default/objects/InquiryLine__c/fields/ComboProduct__c.field-meta.xml
<CustomField>
    <fullName>ComboProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active Combo Product</errorMessage>
        <filterItems>
            <field>ComboProduct__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ComboProduct__c</referenceTo>
    <relationshipLabel>Inquiry Lines</relationshipLabel>
    <relationshipName>InquiryLines</relationshipName>
    <type>Lookup</type>
</CustomField>