force-app/main/default/objects/InquiryLine__c/fields/DurationMinute__c.field-meta.xml
<CustomField>
    <fullName>DurationMinute__c</fullName>
    <formula>( EndTime__c - StartTime__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>