force-app/main/default/objects/InquiryLine__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Inquiry Lines</relationshipLabel>
    <relationshipName>Inquiry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>