force-app/main/default/objects/InquiryLine__c/fields/Iscloned__c.field-meta.xml
<CustomField>
    <fullName>Iscloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Iscloned</label>
    <type>Checkbox</type>
</CustomField>