force-app/main/default/objects/InquiryLine__c/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <label>Old ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>