force-app/main/default/objects/InquiryLine__c/fields/PricingMember__c.field-meta.xml
<CustomField>
    <fullName>PricingMember__c</fullName>
    <formula>PricingTeam__r.TeamMember__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Member</label>
    <type>Text</type>
</CustomField>