force-app/main/default/objects/InquiryLine__c/fields/PricingTeam__c.field-meta.xml
<CustomField>
    <fullName>PricingTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Team</label>
    <referenceTo>PricingTeam__c</referenceTo>
    <relationshipLabel>Inquiry Lines</relationshipLabel>
    <relationshipName>Inquiry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>