force-app/main/default/objects/InquiryLine__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>InquiryRoute__c</referenceTo>
    <relationshipLabel>Inquiry Lines</relationshipLabel>
    <relationshipName>InquiryLines</relationshipName>
    <type>Lookup</type>
</CustomField>