force-app/main/default/objects/InquiryLine__c/fields/Route_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Name__c</fullName>
    <formula>RouteID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Name</label>
    <type>Text</type>
</CustomField>