force-app/main/default/objects/InquiryLine__c/fields/RouteID__c.field-meta.xml
<CustomField>
    <fullName>RouteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route ID</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Inquiry Lines</relationshipLabel>
    <relationshipName>Inquiry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>