force-app/main/default/objects/InquiryLine__c/fields/TaskCreated__c.field-meta.xml
<CustomField>
    <fullName>TaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Created ?</label>
    <type>Checkbox</type>
</CustomField>