force-app/main/default/objects/InquiryLine__c/validationRules/CannotnullComboProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotnullComboProduct</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNULL( ComboProduct__c ) ,NOT(ISNULL(  Inquiry__r.ComboProduct1__c  )))</errorConditionFormula>
    <errorDisplayField>ComboProduct__c</errorDisplayField>
    <errorMessage>Please input Combo Product as same as Combo Product in Inquiry</errorMessage>
</ValidationRule>