force-app/main/default/objects/InquiryLine__c/validationRules/EqualComboProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>EqualComboProduct</fullName>
    <active>false</active>
    <errorConditionFormula>ComboProduct__r.Id  &lt;&gt;  Inquiry__r.ComboProduct1__c</errorConditionFormula>
    <errorDisplayField>ComboProduct__c</errorDisplayField>
    <errorMessage>Combo Product in Inquiry Line and Inquiry needs to be the same</errorMessage>
</ValidationRule>