force-app/main/default/objects/InquiryLine__c/validationRules/LockRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>LockRecord</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
      Inquiry__r.Lock__c = TRUE , 
      NOT ( ISPICKVAL ( Status__c , &quot;Completed&quot; ) ) ,
      NOT ( ISPICKVAL ( Status__c , &quot;Cancelled&quot; ) )
)</errorConditionFormula>
    <errorMessage>This Inquiry is locked. Please contact to the owner/Salesman of this Inquiry. Thank you!</errorMessage>
</ValidationRule>