force-app/main/default/objects/InquiryLine__c/validationRules/NotnullComboProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>NotnullComboProduct</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNULL( ComboProduct__c )) ,(ISNULL( Inquiry__r.ComboProduct1__c )))</errorConditionFormula>
    <errorDisplayField>ComboProduct__c</errorDisplayField>
    <errorMessage>Please input Combo Product as same as Combo Product in Inquiry</errorMessage>
</ValidationRule>