force-app/main/default/objects/InquiryLine__c/validationRules/NullComboProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>NullComboProduct</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL(Inquiry__r.ComboProduct1__r.Id),  NOT(ISNULL(ComboProduct__r.Id ) ))</errorConditionFormula>
    <errorDisplayField>ComboProduct__c</errorDisplayField>
    <errorMessage>Warning! There is no Combo Product in Inquiry</errorMessage>
</ValidationRule>