force-app/main/default/objects/InquiryLine__c/validationRules/ReasonCannotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonCannotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   ISPICKVAL( Status__c , &quot;Cancelled&quot; ) = TRUE ,
   ISBLANK (  Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please leave your comment/reason for this inquiry line. Thank you!</errorMessage>
</ValidationRule>